[package]
name = "solana-sbf-rust-direct-account-pointers"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-account-view = "1.0"
solana-address = "2.0"
solana-cpi = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }

[lints]
workspace = true
